# DART-MLCI

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  Readme.md  TODOs.md  docker-compose.yml  pyproject.toml  replot.sh  reproduce.sh  requirements.txt  setup.cfg  setup.py  test_docker_api.sh  test_docker_integration.py
.github/workflows/: ci.yml  release.yml
artifacts/: chamber_structure.json  dep_chamber_structures.json
artifacts/chips/: sak.json
artifacts/images/calibration_sample/: calibration_config.json
dart_experiment/: check_pixel_scale.py  folder_config.json  folder_config_cellpose_sam.json  folder_config_mm.json  folder_config_reproduce.json
dart_experiment/calibration_data/: calibration_config.json
dart_mlci/: __init__.py  analysis.py  artifacts.py  chip.py  config.py  constants.py  detection.py  experiment.py  io.py  map.py  mask.py  masker.py  pipeline.py  rotation.py  script_utils.py  timelapse.py  types.py  utils.py
dart_mlci/api/: __init__.py  main.py  models.py  settings.py  utils.py
dart_mlci/calibration/: __init__.py  core.py  validation.py
dart_mlci/registration/: __init__.py  _base.py  _ncc.py  _phase_corr.py  preprocessing.py
dart_mlci/test_utils/: __init__.py  image_comparison.py  visual_regression.py
dart_mlci/visualization/: __init__.py  drawing.py  plotting.py  rendering.py  video.py
dmc_masking/: __init__.py  chip.py  config.py  constants.py  detection.py  io.py  map.py  mask.py  masker.py  match.py  pipeline.py  rotation.py  utils.py  visualization.py
dmc_masking/api/: __init__.py  main.py  models.py  settings.py  utils.py
dmc_masking/calibration/: __init__.py  coordinates.py  core.py
dmc_masking/registration/: __init__.py
dmc_masking/test_utils/: __init__.py  visual_regression.py
dmc_masking/visualization/: __init__.py  drawing.py  plotting.py  video.py
docs/: API_BASE64_MIGRATION.md  API_QUICK_START.md  CHIP_CONFIG.md  DOCKER_GUIDE.md  configuration.md  coordinate_systems.md  index.md
scripts/: analyze_growth.py  batch_masking.py  benchmark.py  calibrate_map.py  calibrate_pixel_scale.py  download_artifacts.sh  generate_chip_config.py  generate_dart_frame_video.py  generate_golden_files.py  generate_sak_videos.py  make_demo_assets.sh  prepare_calibration_data.py  process_experiment.py  process_folder.py  process_image.py  run_timelapse_full.sh  run_timelapse_stacking.sh  test_api_endpoints.py  test_timelapse_quick.sh  validate_map.py
tests/: README_REGISTRATION_TESTS.md  TEST_REGISTRATION_SUMMARY.md  conftest.py  test_SAK_library.py  test_analysis.py  test_api.py  test_api_utils.py  test_artifacts.py  test_augmentation.py  test_calibration_coordinates.py  test_calibration_core.py  test_calibration_regression.py  test_calibration_validation.py  test_chip_config.py  test_config.py  test_constants.py  test_coordinate_regression.py  test_create_structure_library.py  test_detect_markers.py  test_download_artifacts.py  test_experiment.py  test_full.py  test_image_comparison_metrics.py  test_io.py  test_io_regression.py  test_map.py  test_mask.py  test_match.py  test_pipeline.py  test_pipeline_cache.py  test_promoted_helpers.py  test_readme_snippets.py  test_rotation.py  test_script_utils.py  test_stack.py  test_timelapse.py  test_types.py  test_utils.py  test_video_animation.py  test_visualization.py  (+2 more)
tests/fixtures/: artifact_helpers.py  image_comparison.py  synthetic_markers.py
tests/golden/: blueprint_positions.json  calibration_positions.json  image_results.json  transform_params.json
tests/registration/: conftest.py  test_artifacts.py  test_integration.py  test_preprocessing.py  test_unit.py
tests/utils/: __init__.py  visual_regression.py
