[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dart-mlci"
version = "0.2.0"
description = "DART: Real-time microfluidic chamber masking library with marker detection, rotation, cropping, and masking capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Johannes Seiffarth", email = "j.seiffarth@fz-juelich.de" },
]
keywords = ["dart", "microfluidics", "image-processing", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "ultralytics",
    "tifffile",
    "opencv-python",
    "kornia",
    "shapely",
    "rasterio",
    "pandas",
    "pydantic>=2.0",
    "scikit-image>=0.20",
    "tqdm",
    "matplotlib",
    "seaborn",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "httpx>=0.25.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]
segmentation = [
    "acia",
    "cellpose",
]

[project.urls]
Homepage = "https://github.com/SMLCI/DART-MLCI"
Repository = "https://github.com/SMLCI/DART-MLCI"
Documentation = "https://github.com/SMLCI/DART-MLCI#readme"
Changelog = "https://github.com/SMLCI/DART-MLCI/blob/main/CHANGELOG.md"
Issues = "https://github.com/SMLCI/DART-MLCI/issues"

[tool.hatch.build.targets.wheel]
packages = ["dart_mlci"]

[tool.hatch.build.targets.sdist]
# Model weights (artifacts/models/*.pt) are intentionally excluded — they are
# ~40MB combined and would bloat the PyPI package. Users run
# `scripts/download_artifacts.sh` once after install to fetch them.
include = [
    "dart_mlci/",
    "tests/",
    "artifacts/chamber_structure.json",
    "artifacts/chips/",
    "scripts/download_artifacts.sh",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not integration'"
markers = [
    "integration: marks tests as integration tests (require full environment setup)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["dart_mlci"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["dart_mlci"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
